<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MonitoredDevice" Id="{21122db2-9ac7-434f-a63e-3dbcd2fb97e5}">
    <Declaration><![CDATA[TYPE ST_MonitoredDevice :
STRUCT
	device : FB_MonitoredDevice;
	deviceId : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>